--- a/app/src/main/res/menu/detailfragment.xml
+++ b/app/src/main/res/menu/detailfragment.xml
@@ -2,7 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_share"
         android:title="@string/action_share"
-        android:orderInCategory="100"
-        app:showAsAction="never"
+        app:showAsAction="always"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
